# learning-bioinformatics

./: README.md  pyproject.toml
misc/: main.py  motif_logo_maker.py  utilities.py
needleman_wunch/: main.py
needleman_wunsch/: main.py
smith_waterman/: main.py
utils/: bioinformatics_utilities.py
